# multi-agents-debate

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.sh  start.sh  stop.sh
backend/: pyproject.toml
backend/app/: __init__.py  client.py  config.py  main.py  models.py  orchestrator.py  prompts.py  role_parser.py  role_store.py  sse.py  store.py
backend/tests/: fakes.py  test_api.py  test_client.py  test_orchestrator.py  test_prompts.py  test_role_parser.py  test_role_store.py  test_sse.py
docs/: PLAN.md  WORKPLACE_PRODUCT_ROADMAP.md
e2e/: fake_provider.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: swarm.spec.ts
frontend/src/: App.tsx  api.ts  exportMarkdown.ts  runReducer.ts  styles.css  types.ts
frontend/src/components/: ClarificationForm.tsx  Composer.tsx  ExpertCard.tsx  History.tsx  MarkdownSection.tsx  RunView.tsx  Settings.tsx  StageTimeline.tsx
frontend/src/components/settings/: DefaultRoleCountPicker.tsx  ModelSelector.tsx  RoleForm.tsx  RoleList.tsx  useRoleLibrary.ts
frontend/src/test/: App.test.tsx  ClarificationForm.test.tsx  MarkdownSection.test.tsx  RunView.test.tsx  Settings.test.tsx  api.test.ts  exportMarkdown.test.ts  fixtures.ts  runReducer.test.ts  setup.ts
outputs/: ai-swarm-framework-spec.md
samples/: review-loop-feedback-2026-07-20-02-30-49.html  swarm-analysis-2026-07-19-dfd0b181.md  swarm-analysis-2026-07-20-de3421ce.md
src/multi_agent_experts/: __init__.py  analyzer.py  cli.py  client.py  models.py  prompts.py
tests/: test_analyzer.py  test_client.py
